Fixed small timeline z-index problem

--- a/dev/css/modules/timeline.scss
+++ b/dev/css/modules/timeline.scss
@@ -87,7 +87,7 @@
       height: 7px;
       border: 2px solid $white;
       border-radius: $circle;
-      z-index: 9;
+      z-index: 2;
     }
   }
 
